@@ -23,6 +23,7 @@ public class ModeleHeuristiqueSolver {
         this.personnages = personnages;
         this.sallesAdjacentes = sallesAdjacentes;
 
+        System.out.println("INIT");
         initialiserDomaines();
         initialiserSolutionsMeurtre();
         appliquerPositionsInitiales(positionsInitiales);
@@ -282,9 +283,12 @@ public class ModeleHeuristiqueSolver {
         for (int p = 0; p < 6; p++) {
             for (int l = 0; l < 6; l++) {
                 for (int t = 1; t < 6; t++) { // On exclut le temps 1
+                    System.out.println("🔍 Vérification pour " + personnages[p] + " au temps " + (t + 1) + " dans le lieu " + (l + 1));
                     if (!peutEtreCoupable(p, l, t)) {
+                        System.out.println("❌ " + personnages[p] + " ne peut pas être le coupable !");
                         solutionsMeurtre[p][l][t] = false;
                     } else {
+                        System.out.println("✅ " + personnages[p] + " peut être le coupable !");
                         auMoinsUneSolution = true;
                     }
                 }
@@ -301,31 +305,77 @@ public class ModeleHeuristiqueSolver {
 
 
     private boolean peutEtreCoupable(int p, int l, int t) {
-        int indexDetective = getIndexPersonnage("D");
+        if (personnages[p].equals("C") && l == 3 && t == 6) {
+            System.out.println("ZONE OMBRE");
+            System.out.println("VERIF SI C ET D SONT LA");
+            System.out.println("C " + domainesPersonnages[t][p][l]);
+            System.out.println("D " + domainesPersonnages[t][getIndexPersonnage("D")][l]);
+        }
 
         // Vérifier que le détective et le suspect sont bien présents
-        if (!domainesPersonnages[t][p][l] || !domainesPersonnages[t][indexDetective][l]) {
+        if (!domainesPersonnages[t][p][l] || !domainesPersonnages[t][getIndexPersonnage("D")][l]) {
             return false;
         }
 
-        // Vérifier qu'ils sont exactement 2 (détective + suspect)
-        int nombrePersonnes = 0;
-        for (int i = 0; i < personnages.length; i++) {
-            if (domainesPersonnages[t][i][l]) {
-                nombrePersonnes++;
+        if (personnages[p].equals("C") && l == 3 && t == 6) {
+            System.out.println("VERIF LIEUX SURS");
+        }
+
+        // On vérifie s'ils sont sûrs d'être là
+        for (int i = 0; i < 6; i++) {
+            if (personnages[p].equals("D") && l == 3 && t == 6) {
+                System.out.println("DE C");
+                System.out.println("Lieu " + i + " : " + domainesPersonnages[t][p][i]);
+                System.out.println("DE D");
+                System.out.println("Lieu " + i + " : " + domainesPersonnages[t][p][i]);
+            }
+            // Cas du personnage testé présent dans un autre lieu
+            if (domainesPersonnages[t][p][i] && i != l) {
+                return true;
+            }
+            // Cas du détective présent dans un autre lieu
+            if (domainesPersonnages[t][getIndexPersonnage("D")][i] && i != l) {
+                return true;
             }
         }
 
-        // 🔹 Nouvelle vérification : NE PAS éliminer immédiatement si plusieurs options existent encore
-        return nombrePersonnes == 2 || (nombrePersonnes > 2 && solutionsMeurtre[p][l][t]);
+        if (personnages[p].equals("C") && l == 3 && t == 6) {
+            System.out.println("VERIF AUTRES PERSONNAGES");
+        }
+
+        // On est sûr que le détective et le personnage sont présents
+        // On regarde si d'autres personnages sont là
+        boolean autrePersonnageAbsent = false;
+        for (int i = 0; i < 6; i++) {
+            // On regarde si un personnage est là
+            if (domainesPersonnages[t][i][l] && i != p && i != getIndexPersonnage("D")) {
+                // On définit que de base, le personnage n'est présent que dans le lieu
+                autrePersonnageAbsent = false;
+                for (int j = 0; j < 6; j++) {
+                    if (domainesPersonnages[t][i][j] && j != l) {
+                        // Le personnage est là dans un autre lieu
+                        autrePersonnageAbsent = true;
+                    }
+                }
+                // Si le personnage est présent que dans un lieu, on renvoie faux
+                if (!autrePersonnageAbsent) {
+                    return false;
+                }
+            }
+        }
+
+        if (!autrePersonnageAbsent) {
+            // Méthode c'est lui
+        }
+        return true;
     }
 
     public void afficherSolutionsMeurtre() {
         List<Map<String, Integer>> solutionsRestantes = new ArrayList<>();
 
         for (int p = 0; p < 6; p++) {
-            for (int l = 0; l < 6; l++) {
-                for (int t = 1; t < 6; t++) {
+            for (int t = 0; t < 6; t++) {
+                for (int l = 1; l < 6; l++) {
                     if (solutionsMeurtre[p][l][t]) {
                         Map<String, Integer> solution = new HashMap<>();
                         solution.put("Coupable", p);
@@ -337,10 +387,22 @@ public class ModeleHeuristiqueSolver {
             }
         }
 
+        // On affiche toutes les positions
+        for (int p = 0; p < 6; p++) {
+            for (int t = 0; t < 6; t++) {
+                for (int l = 0; l < 6; l++) {
+                    if (personnages[p].equals("C") || personnages[p].equals("D")) {
+                        System.out.println("DOMAINE : " + personnages[p] + " - Temps " + (t + 1) + " - Lieu " + (l + 1) + " : " + domainesPersonnages[t][p][l]);
+                        System.out.println("SOLUTIONS : " + personnages[p] + " - Temps " + (t + 1) + " - Lieu " + (l + 1) + " : " + solutionsMeurtre[t][p][l]);
+                    }
+                }
+            }
+        }
+
         if (solutionsRestantes.isEmpty()) {
             System.out.println("❌ Aucune solution valide restante !");
         } else if (solutionsRestantes.size() == 1) {
-            Map<String, Integer> solution = solutionsRestantes.get(0);
+            Map<String, Integer> solution = solutionsRestantes.getFirst();
             System.out.println("✅ Coupable trouvé !");
             System.out.println("Coupable : " + personnages[solution.get("Coupable")]);
             System.out.println("Lieu du crime : " + (solution.get("Lieu") + 1));
@@ -351,6 +413,33 @@ public class ModeleHeuristiqueSolver {
                 System.out.println("- Coupable : " + personnages[sol.get("Coupable")] +
                         ", Lieu : " + (sol.get("Lieu") + 1) +
                         ", Temps : " + (sol.get("Temps") + 1));
+                // On regarde si le coupable est bien dans un lieu où est le détective (OK)
+                // On regarde si le détective est obligatoirement dans cette salle
+                int indexDetective = getIndexPersonnage("D");
+                int nombreFalse = 0;
+                for (int l = 0; l < 6; l++) {
+                    if (!domainesPersonnages[sol.get("Temps")][indexDetective][l]){
+                        nombreFalse++;
+                    }
+                }
+                if (nombreFalse != 5) {
+                    System.out.print("// PAS SUR");
+                    System.out.println();
+                }
+                else {
+                    int nombrePersonnes = 0;
+                    for (int i = 0; i < personnages.length; i++) {
+                        if (domainesPersonnages[sol.get("Temps")][i][sol.get("Lieu")]) {
+                            nombrePersonnes++;
+                        }
+                    }
+                    if (nombrePersonnes != 2) {
+                        System.out.println("// TOUJOURS FAUX");
+                    }
+                    else {
+                        System.out.println("OH LALA LE COUPABLE LA C'EST LUI REGARDE ICI LAAAAAAAAAAAAAAAAAAA");
+                    }
+                }
             }
         }
     }
